--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#ffffff</color>
+    <color name="colorPrimaryDark">#ffffff</color>
+    <color name="colorAccent">#c0c0c0</color>
+
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+    <color name="grey">#c0c0c0</color>
+    <color name="btn_color">#67C394</color>
+
+
+
 </resources>
