--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
 
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
-    <color name="grey">#c0c0c0</color>
+    <color name="grey">#818181</color>
     <color name="btn_color">#67C394</color>
 
 
