--- a/app/src/main/res/layout/fragment_daily_activity.xml
+++ b/app/src/main/res/layout/fragment_daily_activity.xml
@@ -3,10 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.DailyActivityFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycleView"
+        android:id="@+id/listRecycleView"
         android:padding="@dimen/dimen4"
         android:clipToPadding="false"
         android:layout_width="match_parent"
