--- a/app/src/main/res/layout/fragment_videos.xml
+++ b/app/src/main/res/layout/fragment_videos.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.MusicFragment">
+    tools:context=".Fragments.VideosFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listRecyclerViewMusic"
+    <TextView
+        android:id="@+id/listRecyclerViewVideo"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:text="Test"
         android:layout_marginBottom="@dimen/dimen56"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
