Selesai Membuat Profile, Video Masih belum bisa di play

--- a/app/src/main/res/layout/activity_view_pager.xml
+++ b/app/src/main/res/layout/activity_view_pager.xml
@@ -7,7 +7,7 @@
     android:background="@color/white"
     tools:context=".ViewPager">
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/buttonNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,7 +15,7 @@
         android:layout_marginBottom="@dimen/dimen10"
         android:text="@string/next"
         android:textColor="@color/black"
-        android:backgroundTint="@color/btn_color"
+        android:background="@color/btn_color"
         app:cornerRadius="@dimen/dimen20"
         app:layout_constraintBottom_toTopOf="@+id/textSkip"
         app:layout_constraintEnd_toEndOf="parent"
