Selesai Semua, tinggal RecyclerView YoutubePlayer

--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -7,7 +7,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listRecycleViewGallery"
-        android:padding="@dimen/dimen4"
+        android:paddingRight="@dimen/dimen15"
         android:clipToPadding="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
