--- a/app/src/main/res/layout/fragment_daily_activity.xml
+++ b/app/src/main/res/layout/fragment_daily_activity.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="@dimen/dimen14"
     tools:context=".Fragments.DailyActivityFragment">
 
         <androidx.recyclerview.widget.RecyclerView
@@ -17,6 +18,7 @@
             />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:background="@color/grey"
             android:id="@+id/listRecycleViewDaily"
             android:layout_width="0dp"
             android:layout_height="0dp"
