--- a/app/src/main/res/layout/fragment_music_video.xml
+++ b/app/src/main/res/layout/fragment_music_video.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="@dimen/dimen14"
     tools:context=".Fragments.MusicVideoFragment">
 
     <com.google.android.material.tabs.TabLayout
