--- a/app/src/main/res/layout/item_daily_activity.xml
+++ b/app/src/main/res/layout/item_daily_activity.xml
@@ -2,7 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/dimen4">
+    android:layout_margin="@dimen/dimen4"
+    android:background="@color/grey">
 
     <RelativeLayout
         android:layout_width="match_parent"
