--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#67c394</color>
-    <color name="colorPrimaryDark">#99f6c5</color>
+    <color name="colorPrimaryDark">#67c394</color>
     <color name="colorAccent">#349266</color>
 
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
-    <color name="grey">#818181</color>
+    <color name="grey">#F9F9F9</color>
     <color name="btn_color">#67C394</color>
 
 
